[Fix] Optimized performance